traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:1: error: '=' expected but ';' found.
  var cpt; Int = 0
         ^TraversalByColumn:4: error: ')' expected but ';' found.
      setPos(getX()+1, getY();)
                             ^TraversalByColumn:4: error: illegal start of statement
      setPos(getX()+1, getY();)
                              ^